fix: related products header wrapping on small viewport

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -160,6 +160,9 @@
   display: flex
   align-items: center
 
+  @media screen and (max-width: $break-small)
+    display: block
+
 .related-product-list
   --columns: 4
 
